--- a/internship.html
+++ b/internship.html
@@ -41,11 +41,15 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.lever.co/relativity/6412e7c7-ac1b-4fdc-a8f5-9b375cc794ba'>Relativity - Software Engineer Intern - Trace (Fall/Winter 2019)</a></h5> 
+<p><span class="badge badge-light">Chicago</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/starry/jobs/4495493002'>Job Application for Starry Internet Installer at Starry</a></h5> 
 <p><span class="badge badge-light">Denver, Colorado</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o8mWafwk&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nEtcqMw0'>Schneider Electric NAM Careers - Human Resources Intern</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHO9Vfwj&k=Job&j=o8mWafwk&__jvst=Employee&__jvsd=sJC77gwk&__jvsc=Twitter&bid=nEtcqMw0'>Schneider Electric NAM Careers - Human Resources Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -91,7 +95,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InterNations/743999687397711-public-relations-intern-m-f-'>InterNations Public Relations Intern (m/f) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InterNations/743999687397711-public-relations-intern-m-f-'>InterNations Public Relations Intern (m/f) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -115,7 +119,7 @@
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/criteo/4c0ff752-8fe3-4911-bb8f-d627db2bb313'>Criteo - Technical Solutions Internship</a></h5> 
+<h5><a href='https://jobs.lever.co/criteo/4c0ff752-8fe3-4911-bb8f-d627db2bb313'>Criteo - Technical Solutions Internship</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom  Paris</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -127,7 +131,7 @@
 <p><span class="badge badge-light">Barcelona, Spain  Paris</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/spinlaunch/jobs/4498796002'>Job Application for Information Technology Intern at SpinLaunch</a></h5> 
+<h5><a href='https://boards.greenhouse.io/spinlaunch/jobs/4498796002'>Job Application for Information Technology Intern at SpinLaunch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -169,7 +173,7 @@
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/MatterFamilyOffice/743999698606373-family-office-intern-summer-2020-'>Matter Family Office Family Office Intern (Summer 2020) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/MatterFamilyOffice/743999698606373-family-office-intern-summer-2020-'>Matter Family Office Family Office Intern (Summer 2020) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -209,7 +213,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://definityfirst.applytojob.com/apply/FCb3FNpewk/Dynamics-CRM-Dev-Internship'>Dynamics CRM Dev Internship - Definity First - Career Page</a></h5> 
+<h5><a href='https://definityfirst.applytojob.com/apply/FCb3FNpewk/Dynamics-CRM-Dev-Internship'>Dynamics CRM Dev Internship - Definity First - Career Page</a></h5> 
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -253,7 +257,7 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emailmeter.recruiterbox.com/jobs/fk03rfa/?source=twitter'>
     Frontend Developer Intern at Email Meter
 </a></h5> 
 <p><span class="badge badge-light">Madrid Madrid Madrid United States New York</span></p>
@@ -263,7 +267,7 @@
 <p><span class="badge badge-light">Singapore Malaysia Philippines Hong Kong Taiwan</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://careercenter.democraticgain.org/job/graphic-design-intern/51493595/'>Graphic Design Intern Job Opening in Washington, Dist. Columbia - Democratic GAIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careercenter.democraticgain.org/job/graphic-design-intern/51493595/'>Graphic Design Intern Job Opening in Washington, Dist. Columbia - Democratic GAIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -307,7 +311,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698577831-2020-co-op-student-sales-intern-6-months-'>Bosch Group 2020 Co-op Student - Sales Intern (6 months) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698577831-2020-co-op-student-sales-intern-6-months-'>Bosch Group 2020 Co-op Student - Sales Intern (6 months) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -319,7 +323,7 @@
 <p><span class="badge badge-light">Italy</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698573327-marketing-intern'>Flywire Marketing Intern | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Flywire1/743999698573327-marketing-intern'>Flywire Marketing Intern | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -451,15 +455,11 @@
 <p><span class="badge badge-light">London, United Kingdom  France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oqK89fwb&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=nftrpMwP'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oqK89fwb&__jvst=Employee+Referral&__jvsd=svdfVgwD&__jvsc=Twitter&bid=nftrpMwP'>Palo Alto Networks Careers - Intern - Prisma Access Software Engineer</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698560881-internship-eelctrical-engineering'>Bosch Group Internship Eelctrical Engineering | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698560977-internship-in-the-purchasing-project-management'>Bosch Group Internship in the Purchasing Project Management | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
